src/stylesheets/6-templates/_home.scss
// -----------------------------------------------------------------------------
// This file contains styles that are specific to the home page.
// -----------------------------------------------------------------------------

.do-body-container{
    padding-bottom: 100px;
}
/* CSS for Steps */
.do-steps-container{
    position: relative;
    padding: 60px 0px;
    // overflow-x: hidden;
}
.do-step-counter{
    position: absolute;
    z-index: 1;
    top: 35px;
    font-size: 10px;
    color: #d5d5ea;
    left: 0;
}
// inner styling for hiding
.do-inner-hidden{
    display: none;
    &.show{
        display: inherit;
    }
}
// Step status styling
.do-step-container{
    align-items: flex-start;
    // overflow: hidden;
    &.in-progress{
        .do-step-status{
            border-color: $mid-grey;
            .active{
                opacity: 1;
                transition: .3s;
                background-color: $mid-grey;
            }
            ~.do-step-arrow{
                opacity: 1;
                color: $mid-grey;
            }
        }
        .do-step-heading{
            .do-step-heading-text{
                color: $mid-grey;
            }
        }
        // .do-step-body{
        //     z-index: 1;
        //     opacity: 1;
        // }
    }
    &.in-progress.active{
        .do-step-status{
            border-color: $brand-color;
            .active{
                opacity: 1;
                transition: .3s;
                background-color: $brand-color;
    
            }
            ~.do-step-arrow{
                opacity: 1;
                color: $brand-color;
            }
        }
        .do-step-heading{
            .do-step-heading-text{
                color: $brand-color;
            }
        }
        // .do-step-body{
        //     z-index: 1;
        //     opacity: 1;
        // }
    }
    &.done{
        // .do-step-body{
        //     opacity: 1;
        //     z-index: 2;
        //     transition: 1s;
        // }
        // &.active{
        //     z-index: 2;            
        // }
        .do-step-status{
            .done{
                opacity: 1;
                transition: .3s;
            }
            ~.do-step-arrow{
                color: $text-color;
                opacity: 1;
            }
        }
        .do-step-heading{
            .do-step-heading-text{
                color: $text-color;
            }
        }
    }
    &.active{
        .do-step-heading .do-step-heading-text{
            color: $brand-color;
        }
        .do-step-status{
            border-color: $brand-color;
            .done{
                border-color: $brand-color;
            } 
            ~.do-step-arrow{
                opacity: 1;
                color: $brand-color;
            }
        }
        .do-step-body{
            opacity: 1;
            z-index: 1;
            transition: transform 1s;
            -webkit-transform: translateX(0);
            transform: translateX(0);
            transition-property: opacity,transform;
            transition-delay: 0s,0s;
            overflow-y: scroll;
            overflow-y: overlay;
            // height: 100%;
            // min-height: unset;
            padding-right: 20px;
            &.hidden{
                z-index: 0;
                opacity: 0;
            }
        }
    }
    .sets{
        display: none;
        &.active{
            display: block;
        }
    }
}
// Step heading 
.do-step-heading{
    display: flex;
    align-items: flex-start;
    margin-bottom: 20px;
    
    .do-step-heading-text{
        font: $font-regular;
        padding: 0px 20px;
        color: $mid-grey;
        line-height: 24px;
        // flex:1;
        pointer-events: none;
        >.step-link.hide{
            display: none;
        }
        &.clickable{
            cursor: pointer;
            pointer-events: all;
            text-decoration: none;
        }
    }
    .do-step-arrow{
        opacity: 0;
        height: 24px;
    }
}
.step-sub-text{
    display: block;
    font: $font-regular;
    font-size: 10px;    
    color: $gold;
     &.grey{
         color: #d5d5ea;
     }
     &.hide{
         display: none;
     }
}
// step status 
.do-step-status{
    min-width: 24px;
    width: 24px;
    height: 24px;
    display: inline-flex;
    border: 1px solid $mid-grey;
    border-radius: 50%;
    justify-content: center;
    align-items: center;
    transition: .3s;
    position: relative;

    .done,.active{
        position: absolute;
    }
    .done{
        display: inline-block;
        width: 6px;
        height: 12px;
        margin-top: -2px;
        border-right: 1px solid #2d2d2d;
        border-bottom: 1px solid #2d2d2d;
        transform: rotate(45deg);
        opacity: 0;
        top: calc(50% - 5px);
        left: calc(50% - 3px);
    }
    .active{
        opacity: 0;
        // display: inline-block;
        width: 12px;
        height: 12px;
        top: calc(50% - 6px);
        left: calc(50% - 6px);
        border-radius: 50%;
        background-color: $brand-color;
    }
    
}
/* ... */

